# MerkleSim

./: Bench.hs  JustDag.hs  Main.hs  Makefile  Patricia.cabal  README.md
report/: Report.md  distributed.bib  make.sh
src/: Chain.hs  ChainTest.hs  Compat.hs  Dag.hs  DagTest.hs  Main.hs  Msg.hs  PatChain.hs  PatChainTest.hs  Patricia.hs  PatriciaSha.hs  PatriciaTest.hs  SampleTest.hs  Sim.hs  Test.hs  TimeTrie.hs  Util.hs
