cabal-version:      2.4
name:               Patricia
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Sam Anklesaria
maintainer:         anklesaria@utexas.edu

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library
    exposed-modules:  Patricia, Sim, Msg, Chain, PatChain, PatriciaTest, Util, PatChainTest
    default-extensions: FlexibleContexts, FlexibleInstances, TemplateHaskell, TupleSections,
                        ViewPatterns, NumericUnderscores, BangPatterns, ScopedTypeVariables,
                        DeriveFoldable, KindSignatures, TypeApplications, OverloadedLists,
                        StrictData, BinaryLiterals, DeriveGeneric, DeriveAnyClass,
                        GeneralizedNewtypeDeriving, DerivingStrategies

    -- Modules included in this library but not exported.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base, splitmix, random-fu, data-ordlist,
                      QuickCheck, vector, containers, parallel, deepseq,
                      mtl, base-compat, memory, cryptonite, basement
    hs-source-dirs:   src
    default-language: Haskell2010
    ghc-options: -O2
    -- ghc-options:         -Wall -Wincomplete-uni-patterns -Wincomplete-record-updates -Wmi

executable proglet
  main-is: Main.hs
  build-depends: base, Patricia, vector, Chart, Chart-cairo, deepseq
  ghc-options:
    -O2
    -threaded
    -- fprof-auto
    -- "-with-rtsopts=-N -p"
    -- "-with-rtsopts=-N -p -s -xt -hy -l-agu -i0.1"
